# chess_robot_sim

./: .gitignore  .setup_assistant  CMakeLists.txt  README.md  package.xml  test_command_gazebo.sh
config/: controllers.yaml  controllers_6dof.yaml  initial_positions.yaml  joint_limits.yaml  so_arm_101.ros2_control.xacro  urdf.rviz
launch/: chess_gazebo.launch.py  gazebo.launch.py  ignition_gazebo.launch.py  launch_ps5_control.py  robot_state_publisher.launch.py  rviz.launch.py  vanilla_rviz.launch.py
models/: model.sdf
models/chess_bishop_black/: model.sdf
models/chess_king_black/: model.config
models/chess_king_white/: model.sdf
models/chess_knight_black/: model.sdf
models/chess_pawn_black/: model.config
models/chess_queen_white/: model.config  model.sdf
models/chess_rook_white/: model.config  model.sdf
models/so_arm101/: model.config
rviz/: so_arm_101.rviz
scripts/: board_center_ik_solution.py  board_center_solution.json  camera_viewer.py  chess_corner_solution.json  chess_piece_controller.py  chess_piece_movement_test.py  chess_test.py  compute_corners.py  corner_solver.py  joint_movement_debugger.py  manual_chess_game.py  manual_piece_mover.py  move_to_corners.py  move_to_square.py  ps5_arm_controller.py  reach_calculator.py  spawn_robot_gazebo.py  test_board_center.py  test_corners.py  test_joints.py
src/so_101_arm/: .setup_assistant  CMakeLists.txt  package.xml
src/so_101_arm/config/: controllers_6dof.yaml  initial_positions.yaml  joint_limits.yaml
src/so_101_arm/launch/: chess_simulation.launch.py  gz.launch.py  ignition_gazebo.launch.py  minimal_ignition.launch.py  rviz.launch.py  simple.launch.py  test_shapes.launch.py  test_simple.launch.py
src/so_101_arm/models/: model.sdf
src/so_101_arm/models/chess_bishop_black/: model.config
src/so_101_arm/models/chess_bishop_white/: model.config  model.sdf
src/so_101_arm/models/chess_king_black/: model.sdf
src/so_101_arm/models/chess_king_white/: model.config
src/so_101_arm/models/chess_knight_black/: model.config  model.sdf
src/so_101_arm/models/chess_knight_white/: model.config  model.sdf
src/so_101_arm/models/chess_pawn_black/: model.sdf
src/so_101_arm/models/chess_pawn_white/: model.config  model.sdf
src/so_101_arm/models/chess_queen_black/: model.config  model.sdf
src/so_101_arm/models/chess_queen_white/: model.sdf
src/so_101_arm/models/chess_rook_black/: model.config  model.sdf
src/so_101_arm/models/so_101_arm/: model.config
src/so_101_arm/scripts/: chess_piece_controller.py  manual_chess_game.py  manual_piece_mover.py  spawn_robot_gazebo.py
src/so_101_arm/urdf/: simple_shapes.urdf  so_101_arm_6dof.urdf  so_101_arm_6dof.urdf.xacro  so_101_arm_simple.urdf
src/so_101_arm/worlds/: chess_table_world.sdf
urdf/: materials.xacro  so_arm101.urdf.xacro  so_arm_101.urdf.xacro  so_arm_101_gazebo.urdf.xacro
urdf/chess_components/: camera_mount.urdf.xacro  chess_pieces.urdf.xacro  chessboard.urdf.xacro  table.urdf.xacro
worlds/: chess_table_world.sdf  chess_world.sdf  empty_world.sdf
