<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_101_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation package for SO-ARM101 robotic arm</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>ros_gz_bridge</depend>
  
  <!-- Camera and computer vision -->
  <depend>camera_info_manager</depend>
  <depend>compressed_image_transport</depend>

  <!-- ROS2 Control -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>position_controllers</depend>
  
  <!-- Gazebo -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gz_ros2_control</depend>
  
  <!-- Robot Description -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
