<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_101_arm</name>
  <version>0.1.0</version>
  <description>
     This package provides ROS2 support for the SO-101 robot arm (6-DOF configuration). 
     Generated package with all the configuration and launch files for using the so_101_arm 
     with the MoveIt Motion Planning Framework and Gazebo simulation.
  </description>
  <maintainer email="your@email.com">Your Name</maintainer>

  <license>Apache</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/moveit/moveit2/issues</url>
  <url type="repository">https://github.com/moveit/moveit2</url>

  <author email="your@email.com">Your Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
